# CHANGES TO MTurkR 0.7 #

## SIGNIFICANT USER-VISIBILE CHANGES ##

* `BulkCreateFromTemplate` and `BulkCreateFromURLs` now have a `frame.height` argument with a default of 450.

# CHANGES TO MTurkR 0.6.5 #

## SIGNIFICANT USER-VISIBILE CHANGES ##

* Added `BulkCreate`, `BulkCreateFromTemplate`, `BulkCreateFromURLs`, and `BulkCreateFromHITLayout` functions that can be used to create multiple HITs of the same HITType with identical properties but different question content. The `hitsfromtemplate` function has been removed. (#76)
* The graphical wizard now supports creating HIT- and Assignment-level ReviewPolicies during HIT creation. (#55)
* `CreateHIT` now only warns about duplicated arguments (passing both `hit.type` and arguments for `RegisterHITType`) if `verbose = TRUE`.
* The graphical wizard now allows users to create an Qualification AnswerKey Template (via `AnswerKeyTemplate`) from a manually entered Qualification Test. (#73)
* `GrantBonus` now accepts a `unique.request.token` argument. (#75)
* The unused `format` argument to `GenerateNotification` has been removed. (#71)

## DOCUMENTATION ##

* Examples have been added to demonstrate functionality of `AnswerKeyTemplate`.
* Documentation for `GrantQualification` and `RejectQualification` has been merged to clarify the use of these functions. Documentation has been expanded with complete examples of both functions. (#72)
* `GenerateQualificationRequirement` now notes that U.S. state locale values (following ISO 3166-2 format) are allows. (#74)
* `GenerateHITsFromTemplate` now has a more complete example that includes an installed template HTML file. (#72)
* Several small changes have been made to correct documentation and fix bad formatting in the PDF version of the manual. (#72)

## BUG FIXES ##

* Fixed a bug in the CreateQualification dialog of the graphical wizard related to destroying the dialog. (h/t Sean Murphy)